--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
                 >Invitation</a
               >
             </li>
+          -->
             <li>
               <a
-                href="https://drive.google.com/file/d/1zUOc9_a4IeTLpqweRoJ6fgL7dYJHPh62/view?usp=sharing"
+                href="https://drive.google.com/file/d/1E1SMW4YfvTGQyP7zZiqUxOviuYZG_F0j/view?usp=sharing"
                 >Rule Book</a
-              > -->
-            <!-- </li> -->
+              >
+            </li>
             <!-- <li><a href="">Gallery</a></li> -->
 
             <li><a href="#contact">Contact Us</a></li>
@@ -149,7 +150,7 @@
         <h1 style="color: white" class="h1new">
           <b
             >On the spot registrations from <b> 8:30 am to 9:30 am</b> at
-            <b> Mini Auditorium</b></b
+            <b> Main Auditorium</b></b
           >
         </h1>
       </div>
@@ -690,6 +691,14 @@
             are in for a treat!
           </p>
           <h4>
+            <b>How to play:-</b><br /><br />
+            <b>1 :</b> To join the game, your team will be given a PIN.
+            <br /><br />
+            <b>2 :</b> Your team can use a mobile with internet connection to
+            answer the questions, which will be displayed on a screen.
+            <br /><br />
+          </h4>
+          <h4>
             <b>Rules:-</b><br /><br />
             <b>1 :</b> Preliminary round will be a pen and paper quiz consisting
             of 15 questions. <br /><br />
@@ -699,20 +708,14 @@
             event proceeds in such a way that each team gets to answer 5
             questions. If answered correctly, 10 points are awarded, else the
             question is passed to the next team. The passed question carries 5
-            marks.<br /><br />
+            marks. <br /><br />
             <b>4 :</b> The winners are based on scores. If a tie arises, a
             tiebreaker round will take place. <br /><br />
           </h4>
           <h4>
             <b>Contact Details:-</b><br /><br />
-            <b>Heads:</b><br /><br />
-            <b>1: </b>Aishwarya B - 9003621612<br /><br />
-            <b>2: </b>Aishwarya K - 7795164050<br /><br />
-            <b>Deputy Head:</b><br /><br />
-            <b>1: </b>Neha Sharma - 6364446412<br /><br />
-            <b>Volunteers:</b><br /><br />
-            <b>1: </b>Neeharika - 9150022815<br /><br />
-            <b>2: </b>Suryaprakash - 7305235090<br /><br />
+            <b>1: </b>Venkatesh M - 9789060141<br /><br />
+            <b>2: </b>Marshalin - 6382671285<br /><br />
           </h4>
         </div>
 
@@ -730,66 +733,52 @@
             <b>How to play:-</b><br /><br />
             <b>1 :</b> To join the game, your team will be given a PIN.
             <br /><br />
-            <b>2 :</b> Your team can use a laptop/mobile with internet
-            connection to answer the questions, which will be displayed on a
-            screen. <br /><br />
+            <b>2 :</b> Your team can use a mobile with internet connection to
+            answer the questions, which will be displayed on a screen.
+            <br /><br />
           </h4>
           <h4>
             <b>Rules:-</b><br /><br />
-            <b>1 :</b> There will be 2 rounds in total, mutually exclusive of
-            each other. <br /><br />
+            <b>1 :</b> There will be 2 rounds in total, qualifiers from first
+            will move to second round. <br /><br />
             <b>2 :</b> There will be 3 winners (namely 1st place, 2nd place and
             3rd place) in each round, and 6 winners in total. <br /><br />
-            <b>3 :</b> Your team will not be allowed to participate in the
-            second round if your team wins any prize.<br /><br />
-            <b>Good Luck !</b>
           </h4>
           <h4>
             <b>Contact Details:-</b><br /><br />
-            <b>Heads:</b><br /><br />
-            <b>1: </b>Hemanthh Ram - 6385877431<br /><br />
-            <b>2: </b>Hrishik - 9790826447<br /><br />
-            <b>Deputy Head:</b><br /><br />
-            <b>1: </b>Induja - 9444271705<br /><br />
-            <b>Volunteers:</b><br /><br />
-            <!-- <b>1: </b>Sandhiya - 6374043599<br><br> -->
-            <b>1: </b>Madhav - 9445471561<br /><br />
-            <b>2: </b>Naveed Buhari - 9080384471<br /><br />
+            <b>1: </b>Ashwin Ravi - 9676446822<br /><br />
+            <b>2: </b>Karthik Vijayakumar - 8300683073<br /><br />
           </h4>
         </div>
 
         <button class="collapsible">
-          CONNEXION - Life is all about connections :P
+          CONNEXIONS - Life is all about connections :P
         </button>
         <div class="content">
           <br />
           <p>
-            Participants would try to connect the images shown as clues and
-            decode the right answer. Try linking them all!
+            Hey there, problem solvers! Get ready to put your brains to the test
+            in our exciting Connexions compeition! In each round, we'll show you
+            a series of images that are all connected in some way. Your job is
+            to figure out the answer by linking the clues together! You'll have
+            to work together as a team to come up with the right connections.
           </p>
           <h4>
             <b>Rules:-</b><br /><br />
-            <b>1 :</b> Each team of 3 members will have to register with the
-            mail ID of any one person in that team. <br /><br />
-            <b>2 :</b> Google forms will be sent to the mails in which they have
-            to enter the answers for the connexions questions shown on the
-            projector screen.<br /><br />
-            <b>3 :</b> There will be a total of four rounds; in every round, few
-            teams will be eliminated based on the scores.<br /><br />
-            <b>4 :</b> Each round will consist of 10-15 questions. The faster
-            you answer in the forms, the closer you are to victory. <br /><br />
+            <b>1 :</b> A team of three members, decide on a team name and team
+            leader.<br /><br />
+            <b>2 :</b> The first round is a pen-paper round where the questions
+            will be given, all answers have to be consolidated in one sheet of
+            paper and submitted finally.<br /><br />
+            <b>3 :</b> Only six teams will be shortlisted for the second
+            round.<br /><br />
+            <b>4 :</b> Second round specifics will be revealed on the event day.
+            <br /><br />
           </h4>
           <h4>
             <b>Contact Details:-</b><br /><br />
-            <b>Heads:</b><br /><br />
-            <b>1: </b>Swaati - 7338433007<br /><br />
-            <b>2: </b>Sanjai Balajee - 8220267097<br /><br />
-            <b>Deputy Head:</b><br /><br />
-            <b>1: </b>Aishwarya - 9994702933<br /><br />
-            <b>Volunteers:</b><br /><br />
-            <b>1: </b>Sharon Roshni - 7305640365<br /><br />
-            <b>2: </b>Aishwarya - 9994702933<br /><br />
-            <b>3: </b>Sanjnaa S - 9789893371<br /><br />
+            <b>1: </b>Krithik Sathya M - 9003936444<br /><br />
+            <b>2: </b>Pavan V - 9629866610<br /><br />
           </h4>
         </div>
 
@@ -878,52 +867,22 @@
         <button class="collapsible">MEDLEY - Let's Mix Math with games</button>
         <div class="content">
           <br />
-          <p>
-            The registered team has to solve three problems within the
-            stipulated time. Teams have to pick three questions from the
-            question boxes. The difficulty level of each question would be
-            decided by the points earned in each mini-game and the questions
-            would be picked from that particular question box. Mini games are
-            fun oriented mathematical games.
-          </p>
           <h4>
-            <b>Rules:-</b><br /><br />
-            <b>1 :</b> Three mini-games will be conducted for those who
-            registered for this event.<br /><br />
-            <ul>
-              <li>
-                <b>Keep it in the air:</b> Keeping the balloon in the air
-                without touching it.
-              </li>
-              <br />
-              <li>
-                <b>Pitch and catch:</b> A ball has to be thrown. It has to pitch
-                at a point and has to be pocketed in a cup.
-              </li>
-              <br />
-              <li>
-                <b>Score a Goal:</b> A bottle would be kept at a distance. The
-                team members have to kick the ball and knock the bottle.
-              </li>
-              <br />
-            </ul>
-            <b>2 :</b> Based on the points earned in each mini-game, the
-            difficulty level of each question will be decided.<br /><br />
-            <b>3 :</b> Each team would be given three questions that they have
-            to solve within the stipulated time.<br /><br />
-            <b>4 :</b> The winning team will be selected based on how fast they
-            are able to solve the three question.<br /><br />
+            <b>How to play:-</b><br /><br />
+            <b>1 : </b>In round 1, you will get a sheet with fifteen questions.
+            Whoever answers them the quickest and is correct, will proceed to
+            the final round. Here's a tip for you to conquer this round: It's
+            all about math and fun!<br /><br />
+            <b>2 : </b>In round 2, you will have to challenge your memory and
+            reflexes in this fast-paced game where teams compete head-to-head.
+            Test your ability to recall sequences and react swiftly to outsmart
+            your opponents. With each round bringing new challenges, only the
+            sharpest minds will emerge victorious!<br /><br />
           </h4>
           <h4>
             <b>Contact Details:-</b><br /><br />
-            <b>Heads:</b><br /><br />
-            <b>1: </b>Nivetha - 7092747808<br /><br />
-            <b>2: </b>Geetha - 6381297075<br /><br />
-            <b>Deputy Head:</b><br /><br />
-            <b>1: </b>Krithiukha - 8248010588<br /><br />
-            <b>Volunteers:</b><br /><br />
-            <!-- <b>1: </b>Ambiga - 7010328053<br><br> -->
-            <b>1: </b>Bruhati - 9442219036<br /><br />
+            <b>1: </b>Varshini Seshhu - 8939547658<br /><br />
+            <b>2: </b>Dharunya - 9444840865<br /><br />
           </h4>
         </div>
 
@@ -1295,6 +1254,38 @@
             content.style.maxHeight = content.scrollHeight + "px";
           }
         });
+      }
+      let slideIndex = 1;
+      showSlides(slideIndex);
+
+      // Next/previous controls
+      function plusSlides(n) {
+        showSlides((slideIndex += n));
+      }
+
+      // Thumbnail image controls
+      function currentSlide(n) {
+        showSlides((slideIndex = n));
+      }
+
+      function showSlides(n) {
+        let i;
+        let slides = document.getElementsByClassName("mySlides");
+        let dots = document.getElementsByClassName("dot");
+        if (n > slides.length) {
+          slideIndex = 1;
+        }
+        if (n < 1) {
+          slideIndex = slides.length;
+        }
+        for (i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none";
+        }
+        for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex - 1].style.display = "block";
+        dots[slideIndex - 1].className += " active";
       }
     </script>
 
