--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@
           </a>
         </div>
         <h1 style="color: white" class="h1new">
-          <b
-            >On the spot registrations from <b> 8:30 am to 9:30 am</b> at
-            <b> Main Auditorium</b></b
-          >
+          <b>22<sup>nd</sup> March, 2024</b>
+          <br />
+          <b>On the spot registrations from 9.00am at Main Auditorium</b>
         </h1>
       </div>
 
@@ -1165,7 +1164,6 @@
                 <br />
                 <h4>Swaati</h4>
                 <h4><a href="tel:+917338433007">7338433007</a></h4>
-                <br />
                 <br />
                 <h4>Venkatesh</h4>
                 <h4><a href="tel:+919789060141">9789060141</a></h4>
